// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders <Text /> correctly snapshot testing with as in text 1`] = `
<div>
  <span
    class="Textweb__Text-sc-6jf9e4-0 glONNR"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </span>
</div>
`;

exports[`Renders <Text /> correctly snapshot testing with bold text 1`] = `
<div>
  <div
    class="Textweb__Text-sc-6jf9e4-0 lnyJGM"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`Renders <Text /> correctly snapshot testing with maxLines in text 1`] = `
<div>
  <div
    class="Textweb__Text-sc-6jf9e4-0 ehidhQ"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`Renders <Text /> correctly snapshot testing with regular text 1`] = `
<div>
  <div
    class="Textweb__Text-sc-6jf9e4-0 glONNR"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`Renders <Text /> correctly snapshot testing with underlined text 1`] = `
<div>
  <div
    class="Textweb__Text-sc-6jf9e4-0 goqnPz"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;
